--- a/config/config.ini
+++ b/config/config.ini
@@ -1,10 +1,11 @@
 [db]
-username=postgres
-password=Evilcore9320
+username=test
+password=test
 host=localhost
 port=5432
 dbname=postgres
 driver=Pg
 
 [similarweb]
-apikey=
+link=https://api.similarweb.com/v1/similar-rank/top-sites?api_key=%s&limit=50
+apikey=b37ba7d2dd8d4c479977e63fc145438b
